--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "COLOCAR SUA CONNECTION STRING AQUI"
+    "ConexaoPadrao": "Data Source=DELL-QUARTO;Initial Catalog=apiDesafio;Integrated Security=True;Encrypt=False",
   }
 }
