--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ConexaoPadrao": "Data Source=DELL-QUARTO;Initial Catalog=Discipulado;Integrated Security=True;Encrypt=False"
+},
   "AllowedHosts": "*"
 }
